cmake_minimum_required(VERSION 3.16.0)
project(CUVIS.C.EXMPLES CXX)
add_subdirectory(01_loadMeasurement_cpp)
add_subdirectory(02_reprocessMeasurement_cpp)
add_subdirectory(03_exportMeasurement_cpp)
add_subdirectory(04_changeDistance_cpp)
add_subdirectory(05_recordSingleImages_cpp)
add_subdirectory(06_recordVideo_cpp)
add_subdirectory(07_recordVideoFromSessionFile_cpp)
