cmake_minimum_required(VERSION 3.16.0)
project(CUVIS.CPP.EXMPLES CXX)
add_subdirectory(Example_1_Take_Snapshot_cpp)
add_subdirectory(Example_2_Load_Measurement_cpp)
add_subdirectory(Example_3_Reprocess_cpp)
add_subdirectory(Example_4_Exporters_cpp)
add_subdirectory(Example_5_Record_Video_cpp)
add_subdirectory(Example_6_Record_Video_From_SessionFile_cpp)
add_subdirectory(Example_7_Change_Distance_cpp)